--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Dipanjan Biswas</title>
+    <title>Balram Singh</title>
     <meta name="description" content="Visual Design, illustration, UI design">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
@@ -15,15 +15,15 @@
 <body>
     <div class="profilePanel">
         <div class="avater">
-            <img src="images/avatar.png" alt="" title="" />
+            <img src="images/avatar.png" alt="" title="Balram Singh" />
         </div>
-        <h1>Dipanjan Biswas</h1>
-        <h3>Visual design, Illustration, UI design</h3>
-        <p><a href="mailto:dzoneink@gmail.com">dzoneink@gmail.com</a></p>
+        <h1>Balram Singh</h1>
+        <h3>JavaScript, ReactJS, DevOps</h3>
+        <p><a href="mailto:singhbalram786@gmail.com">singhbalram786@gmail.com</a></p>
     </div>
-    <a class="block instgram" href="https://www.instagram.com/dzoneink/" target="_blank">Instagram</a>
-    <a class="block dribbble" href="https://www.dribbble.com/dzoneink/" target="_blank">Dribbble</a>
-    <a class="block behance" href="https://www.behance.net/DipanjanBiswas/" target="_blank">Behance</a>
+    <a class="block instgram" href="https://www.linkedin.com/in/balramsingh/" target="_blank">Linkedin</a>
+    <a class="block dribbble" href="https://github.com/balramsinghindia/" target="_blank">Github</a>
+    <a class="block behance" href="https://medium.com/@reactjavascript/" target="_blank">Medium</a>
 
 </body>
 
