--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <p><a href="mailto:singhbalram786@gmail.com">singhbalram786@gmail.com</a></p>
     </div>
     <a class="block instgram" href="https://www.linkedin.com/in/balramsingh/" target="_blank">Linkedin</a>
+    <a class="block instgram" href="https://twitter.com/ERBALRAMSINGH" target="_blank">Twitter</a>
     <a class="block dribbble" href="https://github.com/balramsinghindia/" target="_blank">Github</a>
     <a class="block behance" href="https://medium.com/@reactjavascript/" target="_blank">Medium</a>
 
