--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <h3>JavaScript, ReactJS, DevOps</h3>
         <p><a href="mailto:singhbalram786@gmail.com">singhbalram786@gmail.com</a></p>
     </div>
-    <a class="block instgram" href="https://www.linkedin.com/in/balramsingh/" target="_blank">Linkedin</a>
-    <a class="block instgram" href="https://twitter.com/ERBALRAMSINGH" target="_blank">Twitter</a>
-    <a class="block dribbble" href="https://github.com/balramsinghindia/" target="_blank">Github</a>
-    <a class="block behance" href="https://medium.com/@reactjavascript/" target="_blank">Medium</a>
+    <a class="block linkedin" href="https://www.linkedin.com/in/balramsingh/" target="_blank">Linkedin</a>
+    <a class="block twitter" href="https://twitter.com/ERBALRAMSINGH" target="_blank">Twitter</a>
+    <a class="block github" href="https://github.com/balramsinghindia/" target="_blank">Github</a>
+    <a class="block medium" href="https://medium.com/@reactjavascript/" target="_blank">Medium</a>
 
 </body>
 
